Added: Kandy ScreenSharing, backup of "CoBrowsing"

--- a/WebApplication2/WebApplication2/crmnext/demo-call.html
+++ b/WebApplication2/WebApplication2/crmnext/demo-call.html
@@ -16,6 +16,7 @@
   <input type="button" id="start-agent" value="Recieve sharing" onclick="startAgent();">
     <input type="button" id="stop-agent" value="END Sharing" onclick="stopAgent();">
     <input type="text" id="session-id" />
+        <input type="button" id="screensharing" value="Screen Sharing" onclick="ScreenShare()" />
 </fieldset>
 
 
