--- a/WebApplication2/WebApplication2/dap/demo-call.html
+++ b/WebApplication2/WebApplication2/dap/demo-call.html
@@ -19,7 +19,7 @@
 
     <input type="button" value="Decline Call" id="decline-call" onclick="declineCall();" disabled/>
     <input type="button" id="start-user" value="Start Sharing" onclick="startUser();" /> 
-   <input type="button" id="stop-user" value="Stop Sharing" onclick="stopUser();" />
+   <input type="button" id="stop-user" value="Stop Sharing" onclick="stopUser();" />    <input type="button" id="screensharing" value="Screen Sharing" onclick="ScreenShare()" disabled />
 </fieldset>
 
 <fieldset>
@@ -31,7 +31,6 @@
 
 <!-- Media containers. -->
 Remote video: <div id="remote-container"></div>
-
 Local video: <div id="local-container"></div>
 <div id="cobrowsing-container" style="width:500px; height:300px; border:1px solid; overflow:hidden;"></div>
 <style>
